[metadata]
name = joglog
version = 0.0.1
description = REST API for logging jogging sessions
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license = GPL-3.0-or-later
author = David Seaward
author_email = david@librem.one
url = https://example.com
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)

[options]
packages = find:
include_package_data = True
install_requires =
    Django ==3.0.6
    django-extensions ==2.2.9
    djangorestframework ==3.11.0
    python-dotenv ==0.13.0
    requests ==2.23.0
    requests-cache ==0.5.2

[options.entry_points]
console_scripts =
    joglog = manage:main
